# desafio-consolidado-vendas

./: .env-example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
consolidado/: 1-Katie McDermott.csv  2-Ana Ritchie.csv  3-Julian Wehner.csv  4-Jessica Medhurst.csv  5-Ralph Bartoletti.csv
src/: consumer.py  publisher.py  rabbitmq_consumer.py  rabbitmq_publisher.py  settings.py
tests/: test_consumer.py  test_publisher.py
